test/files/pos/t0273.scala
object Test {
def a = () => ()
def a[T] = (p:A) => ()
}
