test/files/neg/case-class-tostring/Test_1.scala
object Test {
  def foo(t: A.T) = t match {
    case a: A.TT => 0
  }
}
